# src/adapters/schemas/user/create-user-schema.ts
@@ -1,0 +1,24 @@
+import { IsNumber, IsString, IsUUID } from "class-validator"
+
+export class CreateUserSchema {
+    @IsString()
+    username: string
+
+    @IsString()
+    firstName: string
+
+    @IsUUID()
+    lastName: string
+
+    @IsUUID()
+    password: string
+
+    @IsNumber()
+    telephone: number
+
+    @IsString()
+    email: string
+
+    @IsNumber()
+    discountId: number
+}
